<resources>
    <string name="app_name">Currency Calculator</string>
    <string name="hamburger_icon">Hamburger nav icon</string>
    <string name="sign_up">Sign up</string>
    <string name="currency_calculator">Currency Calculator</string>
    <string name="currency">Currency</string>
    <string name="calculator">Calculator</string>
    <string name="dot">Dot</string>
    <string name="convert">Convert</string>
    <string name="input_amount">Input amount</string>
    <string name="cp_selection_placeholder">Select a country</string>
</resources>